[gd_scene load_steps=15 format=3 uid="uid://s0jt56dbe0kn"]

[ext_resource type="PackedScene" uid="uid://bydh8wq8j224r" path="res://game/weapons/melee/common/melee.tscn" id="1_q7ou4"]
[ext_resource type="Script" uid="uid://t2r6ib02lu28" path="res://game/weapons/melee/skewers/skewers.gd" id="2_1lgvu"]
[ext_resource type="Script" uid="uid://dfhhd4es3t3i" path="res://game/entity/attack/shape_detector.gd" id="3_s4qhw"]
[ext_resource type="Texture2D" uid="uid://dcei15hn601wa" path="res://game/weapons/melee/skewers/skewer.png" id="4_pnlpd"]
[ext_resource type="Texture2D" uid="uid://di262r2a0v0l4" path="res://game/weapons/melee/skewers/skewer2.png" id="5_0mdr0"]
[ext_resource type="Script" uid="uid://bc7ffmlfu6nm7" path="res://game/entity/attack/ray_detector.gd" id="5_erost"]

[sub_resource type="CircleShape2D" id="CircleShape2D_s4qhw"]
radius = 20.0

[sub_resource type="Animation" id="Animation_pnlpd"]
resource_name = "Attack"
length = 0.3
step = 0.025
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Pivot/Skewer:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.075, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(72, 0), Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Attack/RayDetector:enabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.05, 0.15),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [false, true, false]
}

[sub_resource type="Animation" id="Animation_erost"]
resource_name = "AttackBoth"
length = 0.35
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Pivot/Skewer:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.075, 0.175, 0.35),
"transitions": PackedFloat32Array(1, 1, 0.840896, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(88, -8), Vector2(88, -8), Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Pivot2/Skewer2:position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.075, 0.175, 0.35),
"transitions": PackedFloat32Array(1, 1, 0.840896, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(88, 8), Vector2(88, 8), Vector2(0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Attack/ShapeDetector:enabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.05, 0.175),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [false, true, false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("AttackPolygon:polygon")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15, 0.2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [PackedVector2Array(80, -32, 136, -24, 128, -8, 136, 0, 128, 16, 136, 24, 80, 32, 88, 0), PackedVector2Array(88, -32, 184, -16, 176, -8, 184, 0, 176, 8, 184, 16, 88, 32, 104, 0), PackedVector2Array(96, -32, 224, -16, 216, -8, 248, 0, 216, 8, 224, 16, 96, 32, 136, 0), PackedVector2Array(120, -32, 256, 0, 120, 32, 168, 0), PackedVector2Array()]
}

[sub_resource type="Animation" id="Animation_0mdr0"]
resource_name = "AttackSecond"
length = 0.3
step = 0.025
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Pivot2/Skewer2:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.075, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(72, 0), Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Attack/RayDetector2:enabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.05, 0.15),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [false, true, false]
}

[sub_resource type="Animation" id="Animation_1lgvu"]
resource_name = "Equip"
length = 0.3
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Pivot/Skewer:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-61, -83), Vector2(-91, 5)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Pivot/Skewer:rotation")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.744998, -1.88066]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Pivot2/Skewer2:position")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-10, -58), Vector2(23, -70)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Pivot2/Skewer2:rotation")
tracks/3/interp = 2
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [2.28738, 1.14145]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Pivot:z_index")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [-1, 0]
}

[sub_resource type="Animation" id="Animation_s4qhw"]
resource_name = "PostEquip"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Pivot/Skewer:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-91, 5), Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Pivot/Skewer:rotation")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [-1.88066, 0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Pivot2/Skewer2:position")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(23, -70), Vector2(0, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Pivot2/Skewer2:rotation")
tracks/3/interp = 2
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [1.14145, 0.0]
}

[sub_resource type="Animation" id="Animation_obws4"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Pivot/Skewer:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Pivot/Skewer:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Pivot2/Skewer2:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Pivot2/Skewer2:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Pivot:z_index")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Attack/ShapeDetector:enabled")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("AttackPolygon:polygon")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [PackedVector2Array()]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_obws4"]
_data = {
&"Attack": SubResource("Animation_pnlpd"),
&"AttackBoth": SubResource("Animation_erost"),
&"AttackSecond": SubResource("Animation_0mdr0"),
&"Equip": SubResource("Animation_1lgvu"),
&"PostEquip": SubResource("Animation_s4qhw"),
&"RESET": SubResource("Animation_obws4")
}

[node name="Skewers" instance=ExtResource("1_q7ou4")]
script = ExtResource("2_1lgvu")
damage_second = 25
damage_both = 45
damage = 30
shoot_interval = 0.4
to_aim_time = 0.2
speed_multiplier_when_current = 1.11

[node name="AttackPolygon" type="Polygon2D" parent="." index="0"]
color = Color(0.597656, 0.597656, 0.597656, 1)

[node name="ShapeDetector" type="ShapeCast2D" parent="Attack" index="0"]
enabled = false
shape = SubResource("CircleShape2D_s4qhw")
target_position = Vector2(232, 0)
max_results = 1
collision_mask = 3
script = ExtResource("3_s4qhw")
metadata/_custom_type_script = "uid://dfhhd4es3t3i"

[node name="RayDetector" type="RayCast2D" parent="Attack" index="1"]
position = Vector2(-16, 16)
enabled = false
target_position = Vector2(224, 0)
collision_mask = 3
hit_from_inside = true
script = ExtResource("5_erost")
metadata/_custom_type_script = "uid://bc7ffmlfu6nm7"

[node name="RayDetector2" type="RayCast2D" parent="Attack" index="2"]
position = Vector2(16, -16)
enabled = false
target_position = Vector2(224, 0)
collision_mask = 3
hit_from_inside = true
script = ExtResource("5_erost")
metadata/_custom_type_script = "uid://bc7ffmlfu6nm7"

[node name="Pivot" type="Node2D" parent="." index="2"]
position = Vector2(-16, 16)

[node name="Skewer" type="Sprite2D" parent="Pivot" index="0"]
texture = ExtResource("4_pnlpd")
offset = Vector2(56, 0)

[node name="RemoteTransform2D" type="RemoteTransform2D" parent="Pivot" index="1"]
remote_path = NodePath("../../Attack/RayDetector")
update_position = false
update_scale = false

[node name="Pivot2" type="Node2D" parent="." index="3"]
z_index = -1
position = Vector2(16, -16)

[node name="Skewer2" type="Sprite2D" parent="Pivot2" index="0"]
texture = ExtResource("5_0mdr0")
offset = Vector2(56, 0)

[node name="RemoteTransform2D" type="RemoteTransform2D" parent="Pivot2" index="1"]
remote_path = NodePath("../../Attack/RayDetector2")
update_position = false
update_scale = false

[node name="Aim" type="Line2D" parent="." index="4"]
visible = false
z_index = 10
points = PackedVector2Array(40, 0, 192, 0)
width = 40.0
default_color = Color(0, 0, 0, 0.25098)

[node name="AnimationPlayer" parent="." index="5"]
libraries = {
&"": SubResource("AnimationLibrary_obws4")
}

[node name="Timer" type="Timer" parent="." index="6"]
one_shot = true

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
